--- a/styles/style.css
+++ b/styles/style.css
@@ -5,16 +5,14 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.centered-block {
-  margin: auto;
-}
-
+/*Шапка сайта*/
 .header {
+  display: flex;
+  position: relative;
+  margin: auto;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  position: relative;
-  display: flex;
   align-items: center;
   background-color: #f2f2f2;
 }
@@ -31,7 +29,7 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__title {
@@ -39,9 +37,9 @@
   font-size: 102px;
   font-weight: 600;
   color: #000000;
-  display: inline-block;
   width: 730px;
   margin: 64px;
+  padding: 0;
   z-index: 2;
 }
 
@@ -51,23 +49,25 @@
   font-weight: normal;
   color: #000000;
   position: absolute;
-  display: inline-block;
   width: 388px;
   bottom: 30px;
   left: 64px;
-  z-index: 3;
+  padding: 0;
+  z-index: 2;
 }
 
 .link {
   color: #2f80ed;
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 .header__main-illustration {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 4;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -79,7 +79,111 @@
   right: 0;
 }
 
+/*Контент страницы*/
 
+/*Описание страницы*/
+.description {
+  margin-top: 100px;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0;
+  color:#2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  padding: 0;
+  margin-bottom: 30px;
+}
+  .two-columns__main-text:last-of-type {
+    margin-bottom: 0;
+  }
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-weight: 600;
+  margin-bottom: 30px;
+  padding: 0;
+}
+
+/*Цифры и факты*/
+.digits {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 100px 0px;
+}
+
+.section-title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  width: 60%;
+  margin: auto;
+  padding: 0;
+}
+
+.digits__title {
+  color: #000000;
+}
+
+.section-subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+  margin: 20px auto;
+  padding: 0;
+}
+
+.digits__subtitle {
+  color: #000000;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  list-style: none;
+}
+
+.table__cell {
+  width: 250px;
+  top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table_text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
 
 .table__cell_theme_dark {
   width: 200px;
