--- a/styles/style.css
+++ b/styles/style.css
@@ -157,15 +157,14 @@
   color: #000000;
 }
 
+/*Таблица*/
 .table {
   width: 1100px;
   margin: 0 auto;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
   justify-content: space-between;
-  align-items: flex-start;
-  list-style: none;
 }
 
 .table__cell {
