--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,12 @@
 
 /*Шапка сайта*/
 .header {
-  display: flex;
-  position: relative;
-  margin: auto;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  position: relative;
+  margin: auto;
   align-items: center;
   background-color: #f2f2f2;
 }
@@ -29,38 +29,39 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .header__title {
+  width: 730px;
+  margin: 64px;
+  padding: 0;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
   color: #000000;
-  width: 730px;
-  margin: 64px;
-  padding: 0;
   z-index: 2;
 }
 
 .header__subtitle {
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  color: #000000;
-  position: absolute;
   width: 388px;
   bottom: 30px;
   left: 64px;
   padding: 0;
+  position: absolute;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #000000;
   z-index: 2;
 }
 
-.link {
-  color: #2f80ed;
-  text-decoration: none;
+.header__link {
   margin: 0;
   padding: 0;
+  color: #2f80ed;
+  text-decoration: none;
+  z-index: 2;
 }
 
 .header__main-illustration {
@@ -73,10 +74,10 @@
 .header__square-pic {
   height: 568px;
   width: 568px;
-  background-color: #2f80ed;
   position: absolute;
   top: 64px;
   right: 0;
+  background-color: #2f80ed;
 }
 
 /*Контент страницы*/
@@ -95,31 +96,33 @@
 
 .two-columns__brief {
   width: 175px;
+  padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  padding: 0;
   color:#2f80ed;
 }
 
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
+  padding: 0;
+  margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  padding: 0;
-  margin-bottom: 30px;
+  color: #000000;
 }
   .two-columns__main-text:last-of-type {
     margin-bottom: 0;
   }
 
 .two-columns__span-accent {
-  line-height: 34px;
-  font-weight: 600;
   margin-bottom: 30px;
   padding: 0;
+  line-height: 34px;
+  font-weight: 600;
+  color: #000000;
 }
 
 /*Цифры и факты*/
@@ -130,13 +133,13 @@
 }
 
 .section-title {
+  width: 60%;
+  margin: auto;
+  padding: 0;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
   text-align: center;
-  width: 60%;
-  margin: auto;
-  padding: 0;
 }
 
 .digits__title {
@@ -144,13 +147,13 @@
 }
 
 .section-subtitle {
+  width: 60%;
+  margin: 20px auto 0;
+  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  width: 60%;
-  margin: 20px auto;
-  padding: 0;
 }
 
 .digits__subtitle {
@@ -160,33 +163,89 @@
 /*Таблица*/
 .table {
   width: 1100px;
-  margin: 0 auto;
-  padding: 0;
   display: grid;
   grid-template-columns: auto auto auto auto;
+  margin: 0 auto;
+  padding: 0;
   justify-content: space-between;
 }
 
 .table__cell {
   width: 250px;
-  top: 60px;
+  margin: 60px 0 0;
+  padding: 0;
 }
 
 .table__heading {
+  margin: 0;
+  padding: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  color: #000000;
 }
 
-.table_text {
+.table__text {
+  margin: 20px 0 0;
+  padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  color: #000000;
+}
+
+/*Метод Фейнмана*/
+.feynman {
+  margin: auto;
+  position: relative;
+  padding-top: 100px;
+  height: 890px;
+  margin-top: 100px;
+  align-items: center;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-position: bottom 0 left 0;
+  background-repeat: no-repeat;
+}
+
+.feynman__title {
+  max-width: 648px;
+  margin: 0 auto;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+  color: #000000;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0;
+  padding: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  color: #000000;
+}
+
+.feynman__link {
+  position:absolute;
+  right: 48px;
+  top: auto;
+  margin: 0;
+  padding: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
+  color: white;
 }
