--- a/styles/style.css
+++ b/styles/style.css
@@ -12,18 +12,15 @@
   max-height: 756px;
   display: flex;
   position: relative;
-  margin: auto;
+  margin: 0;
   align-items: center;
   background-color: #f2f2f2;
-}
-
-.logo {
-  background-image: url(../images/logo_place_header.svg);
 }
 
 .logo_place_header{
   width: 228px;
   height: 32px;
+  background-image: url(../images/logo_place_header.svg);
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
@@ -84,7 +81,7 @@
 
 /*Описание страницы*/
 .description {
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 .two-columns {
@@ -309,14 +306,94 @@
 .kaufman__triangle {
   width: 877px;
   height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   position:absolute;
   right: -210px;
   top: 0;
 }
 
-/*Подвал
+/*Подвал*/
 .footer {
   min-height: 350px;
   padding: 60px 0 40px;
+  display: flex;
+  background-color: #1f1f1f;
 }
-*/
+
+.logo_place_footer {
+  width: 228px;
+  height: 32px;
+  margin-top: 0;
+  background-image: url(../images/logo_place_footer.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.footer__columns {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  flex-direction: column;
+  position: relative;
+  justify-content: space-evenly;
+}
+
+.footer__author {
+  margin: 0;
+  padding: 18px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__column_content_info {
+  flex-direction: column;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.footer__column-heading {
+  margin: 0;
+  padding-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+}
+
+.footer__column-link {
+  margin: 0;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+  .footer__column-link:last-of-type {
+    padding-bottom: 0;
+  }
+
+.footer__column_content_social {
+  flex-direction: column;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
