--- a/styles/style.css
+++ b/styles/style.css
@@ -335,22 +335,20 @@
   width: 90%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-content: space-between;
 }
 
 .footer__column_content_copyright {
   flex-basis: 711px;
+  display: flex;
   flex-direction: column;
-  position: relative;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .footer__author {
   margin: 0;
   padding: 18px 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
