--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,12 @@
   background-color: #f2f2f2;
 }
 
-.logo_place_header{
+.logo {
   width: 228px;
   height: 32px;
+}
+
+.logo_place_header{
   background-image: url(../images/logo_place_header.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -30,7 +33,7 @@
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
   margin: 64px;
   padding: 0;
   line-height: 96px;
@@ -41,11 +44,12 @@
 }
 
 .header__subtitle {
-  width: 388px;
-  bottom: 30px;
-  left: 64px;
+  max-width: 388px;
+  margin: 0;
   padding: 0;
   position: absolute;
+  bottom: 30px;
+  left: 64px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -62,9 +66,12 @@
 }
 
 .header__main-illustration {
+  width: 765px;
+  height: 608px;
   position: absolute;
   right: 0;
   bottom: 0;
+  object-fit: cover;
   z-index: 1;
 }
 
@@ -92,7 +99,8 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
+  margin: 0;
   padding: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -101,21 +109,24 @@
 }
 
 .two-columns__main-text {
-  width: 80%;
+  max-width: 80%;
   min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
   padding: 0;
-  margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   color: #000000;
 }
-  .two-columns__main-text:last-of-type {
+  .two-columns__paragraph:last-of-type {
     margin-bottom: 0;
   }
 
 .two-columns__span-accent {
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   padding: 0;
   line-height: 34px;
   font-weight: 600;
@@ -127,7 +138,8 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 100px 0;
+  padding: 100px 0 0;
+  align-items: center;
 }
 
 .section-title {
@@ -160,6 +172,7 @@
   margin: 0 auto;
   padding: 0;
   justify-content: space-between;
+  list-style: none;
 }
 
 .table__cell {
@@ -188,10 +201,11 @@
 
 /*Метод Фейнмана*/
 .feynman {
+  box-sizing: border-box;
   margin: auto;
   position: relative;
   padding-top: 100px;
-  height: 890px;
+  min-height: 890px;
   margin-top: 100px;
   align-items: center;
   background-color: #f2f2f2;
@@ -201,7 +215,7 @@
 }
 
 .feynman__title {
-  max-width: 648px;
+  width: 648px;
   margin: 0 auto;
   padding: 0;
   line-height: 1.15;
@@ -224,7 +238,7 @@
 .feynman__link {
   position:absolute;
   right: 48px;
-  top: auto;
+  top: 50%;
   margin: 0;
   padding: 0;
   line-height: 51px;
@@ -246,35 +260,16 @@
 }
 
 .section-title_theme_dark {
-  width: 60%;
-  margin: auto;
-  padding: 0;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
   color: white;
-  text-align: center;
 }
 
 .section-subtitle_theme_dark {
-  width: 60%;
-  margin: 20px auto 0;
-  padding: 0;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
   color: white;
-  text-align: center;
 }
 
-.table_theme_dark{
-  width: 1100px;
+.table_theme_dark {
   position: relative;
-  display: grid;
   grid-template-columns: auto auto auto auto auto;
-  margin: 0 auto;
-  padding: 0;
-  justify-content: space-between;
   z-index: 1;
 }
 
@@ -285,21 +280,11 @@
   color: white;
 }
 
-.table__heading_theme_dark{
-  margin: 0;
-  padding: 0;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
+.table__heading_theme_dark {
   color: white;
 }
 
-.table__text_theme_dark{
-  margin: 20px 0 0;
-  padding: 0;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+.table__text_theme_dark {
   color: white;
 }
 
@@ -315,6 +300,7 @@
 
 /*Подвал*/
 .footer {
+  box-sizing: border-box;
   min-height: 350px;
   padding: 60px 0 40px;
   display: flex;
@@ -322,8 +308,6 @@
 }
 
 .logo_place_footer {
-  width: 228px;
-  height: 32px;
   margin-top: 0;
   background-image: url(../images/logo_place_footer.svg);
   background-size: contain;
@@ -339,11 +323,14 @@
   align-content: space-between;
 }
 
+.footer__column {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .footer__column_content_copyright {
   flex-basis: 711px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .footer__author {
@@ -355,10 +342,9 @@
   color: white;
 }
 
-.footer__column_content_info {
-  flex-direction: column;
-  justify-content: space-around;
-  list-style: none;
+.footer__column-links {
+  margin: 0;
+  padding: 0;
 }
 
 .footer__column-heading {
@@ -383,12 +369,6 @@
   .footer__column-link:last-of-type {
     padding-bottom: 0;
   }
-
-.footer__column_content_social {
-  flex-direction: column;
-  justify-content: space-around;
-  list-style: none;
-}
 
 .footer__social-icon {
   width: 16px;
