--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -1,7 +1,7 @@
-.digits {
+.techniques {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 100px 0 0;
+  padding: 100px 0;
   align-items: center;
 }
