--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/rotation/rotation.css);
+
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/logo/_place/logo_place_footer.css);
@@ -12,6 +14,14 @@
 @import url(../blocks/header/__square-pic/header__square-pic.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
+
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+
 
 @import url(../blocks/description/description.css);
 @import url(../blocks/two-columns/two-columns.css);
