--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,10 +1,9 @@
 .feynman {
   box-sizing: border-box;
-  margin: auto;
+  margin: 0 auto;
   position: relative;
   padding-top: 100px;
   min-height: 890px;
-  margin-top: 100px;
   align-items: center;
   background-color: #f2f2f2;
   background-image: url(../../images/feynman.png);
