--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,7 +1,7 @@
-.digits {
+.resources {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 100px 0;
+  padding: 100px 0 217px;
   align-items: center;
 }
