--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -7,4 +7,8 @@
   color: white;
   text-decoration: none;
   list-style: none;
+  transition: opacity .4s;
 }
+  .footer__column-link:hover {
+    opacity: 0.5;
+  }
