--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,6 +1,7 @@
 .header__title {
   max-width: 730px;
-  margin: 64px;
+  margin: 0;
+  margin-left: 64px;
   padding: 0;
   line-height: 96px;
   font-size: 102px;
