--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,7 +1,7 @@
 .kaufman {
   position: relative;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   padding: 90px 0;
   background-color: #1f1f1f;
   overflow: hidden;
