--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,11 @@
 .resources__logo-zone {
+  display: flex;
+  flex-direction: row;
   width: 1100px;
   margin: 0 auto;
+  padding: 0;
   padding-top: 80px;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
 }
