--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,6 +1,6 @@
 .resources {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin: 0;
   padding: 100px 0 217px;
   align-items: center;
