--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -1,6 +1,6 @@
 .techniques {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin: 0;
   padding: 100px 0 0;
   align-items: center;
