--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,7 +1,7 @@
 .video {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin: 0 auto;
   padding-top: 100px;
   align-items: center;
   overflow: visible;
